@@ -2254,14 +2254,14 @@ static int Parser_isValidEndElement(
 	IXML_Node *newNode)
 {
 	assert(xmlParser);
-	assert(xmlParser->pCurElement->element);
-	assert(newNode);
-	assert(newNode->nodeName);
 
 	if (xmlParser->pCurElement == NULL) {
 		return 0;
 	}
 
+	assert(xmlParser->pCurElement->element);
+	assert(newNode);
+	assert(newNode->nodeName);
 	return strcmp(xmlParser->pCurElement->element, newNode->nodeName) == 0;
 }
 
